## Process this file with automake to produce Makefile.in
# vim: set noet sw=2 ts=8 sts=0:
#
# Copyright (C) Joachim Falk <joachim.falk@gmx.de> $Date: 2003/01/15 16:43:20 $
#
# Makefile.am is part of the jflib distribution of Joachim Falk;
# you can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation;
# either version 2 of the License, or (at your option) any later version.
#
# The jflib distributio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this program; If not, write to
# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.
#
# $Log$

include $(auxdir)/jfrules.mk

SUBDIRS=

if SYNTH_SW
  SW_SYNTH_SUBDIR = synthesis-sw
  include $(pkg_synthesis_sw_builddir)/Rules-Synth.mk
endif
if SYNTH_VAST
  VASTSYNTH_SUBDIR = vast-synthesis
  include $(root_builddir)/Synthesis-Vast/Rules-Synth.mk
endif
if SYNTH_MPI
  MPI_SYNTH_SUBDIR = synthesis-mpi
  include $(pkg_synthesis_mpi_builddir)/Rules-Synth.mk
endif
if SYNTH_TLM
  TLM_SYNTH_SUBDIR = synthesis-tlm
  include $(pkg_synthesis_tlm_builddir)/Rules-Synth.mk
endif
if SYNTH_HW
  HWSYNTH_SUBDIR   = hwsynth
  include $(root_builddir)/Synthesis-Actor-Cynthesizer/Rules-Synth.mk
endif
if SYNTH_HWC
  HWSYNTHC_SUBDIR  = hwsynth-concurrent
  include $(root_builddir)/Synthesis-Actor-Concurrent/Rules-Synth.mk
endif
if SYNTH_HWGS
  GINGER_SYNTH_SUBDIR  = hwsynth-ginger-snap
  include $(root_builddir)/Synthesis-Actor-Ginger-Snap/Rules-Synth.mk
endif

AM_LDFLAGS = @AM_LDFLAGS@ @SYSTEMOC_LDFLAGS@
AM_CPPFLAGS= @AM_CPPFLAGS@ @SYSTEMOC_INCLUDE@ -Wno-deprecated

noinst_PROGRAMS= simulation-sqr

simulation_sqr_SOURCES= design-sqr.cpp
simulation_sqr_LDADD =
if PKG_SYSTEMOC_USE_SRCDIR_VERSION
simulation_sqr_LDADD += $(SYSTEMOC_LIBPATH)/libsystemoc.la
else
# SYSTEMOC_LIBPATH may not be defined for external libraries
simulation_sqr_LDADD += -lsystemoc
endif

# autotest script is build by some source file. #! line is generated by
#  automake to guarantee proper path. Other scripting languages are easy
#  possible, too (e.g., Perl).
noinst_SCRIPTS=autotest.sh

CLEANFILES=$(noinst_SCRIPTS)

autotest.sh: simulation-sqr $(srcdir)/autotest-sh
	rm -f $@
	echo "#!" $(BASH) > $@
	cat autovars.sh $(srcdir)/autotest-sh >> $@
	chmod +x $@

# to check we just call the 'autotest.sh' script
check: autotest.sh
	./autotest.sh
  
if SYNTH_SW
synth-sw: $(SW_SYNTH_SUBDIR)/smoc-synth-sqr
$(SW_SYNTH_SUBDIR)/sqr.ast.xml: design-sqr.cpp
.PHONY: synth-sw
endif

if SYNTH_MPI
synth-mpi: $(MPI_SYNTH_SUBDIR)/smoc-synth-sqr
$(MPI_SYNTH_SUBDIR)/sqr.ast.xml: design-sqr.cpp
.PHONY: synth-mpi
endif

if SYNTH_TLM
synth-tlm: $(TLM_SYNTH_SUBDIR)/smoc-tlmsynth-all-sqr.stamp
.PHONY: synth-tlm
endif

if SYNTH_VAST
vastsynth: $(VASTSYNTH_SUBDIR)/vast_virtualPrototype-sqr.stamp
$(VASTSYNTH_SUBDIR)/sqr.ast.xml: design-sqr.cpp
.PHONY: vastsynth
endif

if SYNTH_HW
hwsynth: $(HWSYNTH_SUBDIR)/smoc-hwsynth-all-sqr.stamp
.PHONY: hwsynth
endif

if SYNTH_HWC
hwsynthc: $(HWSYNTHC_SUBDIR)/smoc-hwsynthc-all-sqr.stamp
.PHONY: hwsynthc
endif

if SYNTH_HWGS
ginger_synth: $(GINGER_SYNTH_SUBDIR)/smoc-ginger-synth-all-sqr.stamp
.PHONY: ginger_synth
endif


