## Process this file with automake to produce Makefile.in
# vim: set noet sw=2 ts=8 sts=0:
#
# Copyright (C) Joachim Falk <joachim.falk@gmx.de> $Date: 2003/01/15 16:43:20 $
#
# Makefile.am is part of the jflib distribution of Joachim Falk;
# you can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation;
# either version 2 of the License, or (at your option) any later version.
#
# The jflib distributio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this program; If not, write to
# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.
#
# $Log$

include $(auxdir)/jfrules.mk

SUBDIRS=

if SYNTH_SW
  SW_SYNTH_SUBDIR = synthesis-sw
  include $(pkg_synthesis_sw_builddir)/mk/Rules-Synth-II.mk
endif
if SYNTH_PTHREAD
  PTHREAD_SYNTH_SUBDIR = synthesis-pthread
  PTHREAD_SYNTH_INST_FLAGS = --no-preprocess-macros
  include $(pkg_synthesis_pthread_builddir)/mk/Rules-Synth-II.mk
endif
if SYNTH_SYSC
  SYSC_SYNTH_SUBDIR = synthesis-sysc
  include $(pkg_synthesis_systemc_builddir)/mk/Rules-Synth-II.mk
endif
if SYNTH_CYN
  CYN_SYNTH_SUBDIR = synthesis-cyn
  include $(pkg_synthesis_cynthesizer_builddir)/mk/Rules-Synth-II.mk
endif
if SYNTH_TLM
  TLM_SYNTH_SUBDIR = synthesis-tlm
  include $(pkg_synthesis_tlm_builddir)/mk/Rules-Synth-II.mk
endif

AM_LDFLAGS = @AM_LDFLAGS@ @SYSTEMOC_LDFLAGS@
AM_CPPFLAGS= @AM_CPPFLAGS@ @SYSTEMOC_INCLUDE@ -Wno-deprecated

noinst_PROGRAMS= simulation-sqr syscsim-sqr

simulation_sqr_SOURCES= design-sqr.cpp
simulation_sqr_LDADD =
if PKG_SYSTEMOC_USE_SRCDIR_VERSION
simulation_sqr_LDADD += $(SYSTEMOC_LIBPATH)/libsystemoc.la
else
# SYSTEMOC_LIBPATH may not be defined for external libraries
simulation_sqr_LDADD += -lsystemoc
endif

syscsim_sqr_SOURCES= systemc-sqr.cpp
syscsim_sqr_LDADD = -lsystemc

clean-local:
	rm -f sqr.cpp sqr.smx sqr.ngx

sqr.cpp: $(simulation_sqr_SOURCES)
	{ for i in $^; do echo "#include \"$$i\""; done; } > $@

%.smx: simulation-%
	./'$<' --export-smx='$@'

# autotest script is build by some source file. #! line is generated by
#  automake to guarantee proper path. Other scripting languages are easy
#  possible, too (e.g., Perl).
noinst_SCRIPTS=autotest.sh

CLEANFILES=$(noinst_SCRIPTS)

autotest.sh: simulation-sqr $(srcdir)/autotest-sh autovars.sh
	rm -f $@
	echo "#!" $(BASH) > $@
	cat autovars.sh $(srcdir)/autotest-sh >> $@
	chmod +x $@

# to check we just call the 'autotest.sh' script
check: autotest.sh
	./autotest.sh
  
if SYNTH_SW
synth-sw: sqr-$(SW_SYNTH_SUBDIR)/top
.PHONY: synth-sw
endif

if SYNTH_PTHREAD
synth-pthread: sqr-$(PTHREAD_SYNTH_SUBDIR)/top
.PHONY: synth-pthread
endif

if SYNTH_SYSC
synth-sysc: sqr-$(SYSC_SYNTH_SUBDIR)/top
.PHONY: synth-sysc
endif

if SYNTH_CYN
synth-cyn: sqr-$(CYN_SYNTH_SUBDIR)/top
.PHONY: synth-cyn
endif

if SYNTH_TLM
synth-tlm: sqr-$(TLM_SYNTH_SUBDIR)/top
.PHONY: synth-tlm
endif
