## Process this file with automake to produce Makefile.in
# vim: set noet sw=2 ts=8 sts=0:
#
# Copyright (C) Joachim Falk <joachim.falk@gmx.de> $Date: 2003/01/15 16:43:20 $
#
# Makefile.am is part of the jflib distribution of Joachim Falk;
# you can redistribute it and/or modify it under the terms of the
# GNU General Public License as published by the Free Software Foundation;
# either version 2 of the License, or (at your option) any later version.
#
# The jflib distributio is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# General Public License for more details.
#
# You should have received a copy of the GNU General Public
# License along with this program; If not, write to
# the Free Software Foundation, Inc., 59 Temple Place - Suite 330,
# Boston, MA 02111-1307, USA.
#
# $Log$

include $(auxdir)/jfrules.mk

SUBDIRS=

AM_LDFLAGS = @AM_LDFLAGS@ @SYSTEMOC_LDFLAGS@
AM_CPPFLAGS= @AM_CPPFLAGS@ @SYSTEMOC_INCLUDE@ -Wno-deprecated -Dcimg_display_type=0

noinst_PROGRAMS= simulation-wsdf-recons-dila simulation-wsdf-recons-dila-fast simulation-wsdf-recons-dila-fifo

simulation_wsdf_recons_dila_SOURCES= design-wsdf-recons-dila.cpp
simulation_wsdf_recons_dila_LDADD =
if PKG_SYSTEMOC_USE_SRCDIR_VERSION
simulation_wsdf_recons_dila_LDADD += $(SYSTEMOC_LIBPATH)/libsystemoc.la
else
# SYSTEMOC_LIBPATH may not be defined for external libraries
simulation_wsdf_recons_dila_LDADD += -lsystemoc
endif

simulation_wsdf_recons_dila_fast_SOURCES= design-wsdf-recons-dila-fast.cpp
simulation_wsdf_recons_dila_fast_LDADD =
if PKG_SYSTEMOC_USE_SRCDIR_VERSION
simulation_wsdf_recons_dila_fast_LDADD += $(SYSTEMOC_LIBPATH)/libsystemoc.la
else
# SYSTEMOC_LIBPATH may not be defined for external libraries
simulation_wsdf_recons_dila_fast_LDADD += -lsystemoc
endif

simulation_wsdf_recons_dila_fifo_SOURCES= design-wsdf-recons-dila-fifo.cpp
simulation_wsdf_recons_dila_fifo_LDADD =
if PKG_SYSTEMOC_USE_SRCDIR_VERSION
simulation_wsdf_recons_dila_fifo_LDADD += $(SYSTEMOC_LIBPATH)/libsystemoc.la
else
# SYSTEMOC_LIBPATH may not be defined for external libraries
simulation_wsdf_recons_dila_fifo_LDADD += -lsystemoc
endif

# autotest script is build by some source file. #! line is generated by
#  automake to guarantee proper path. Other scripting languages are easy
#  possible, too (e.g., Perl).
noinst_SCRIPTS=autotest.sh

CLEANFILES=$(noinst_SCRIPTS)

autotest.sh: simulation-wsdf-recons-dila simulation-wsdf-recons-dila-fast simulation-wsdf-recons-dila-fifo $(srcdir)/autotest-sh
	rm -f $@
	echo "#!" $(BASH) > $@
	cat autovars.sh $(srcdir)/autotest-sh >> $@
	chmod +x $@

# to check we just call the 'autotest.sh' script
check: autotest.sh all
	./autotest.sh  


all: example.bmp seed.bmp example2.bmp seed2.bmp

%.bmp: %-bmp
	cp $^ $@
